--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node ./index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["koa", "iot", "yeurdreamin"],
+  "keywords": [
+    "koa",
+    "iot",
+    "yeurdreamin"
+  ],
   "author": "Ankit Taneja",
   "license": "ISC",
   "dependencies": {
@@ -15,7 +19,8 @@
     "koa-body": "^4.1.0",
     "koa-ejs": "^4.2.0",
     "koa-router": "^7.4.0",
-    "mqtt": "^2.18.8"
+    "mqtt": "^2.18.8",
+    "sfdx-node": "^1.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
