--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "koa-body": "^4.1.0",
     "koa-ejs": "^4.2.0",
     "koa-router": "^7.4.0",
-    "mqtt": "^3.0.0",
-    "sfdx-node": "^1.3.2"
+    "mqtt": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
